--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </header>
 
   <main class="anime-list" id="animeList">
-    <a href="chainsaw-man.html" class="anime-card" data-category="TV Series">
+    <a href="chainsaw_man.html" class="anime-card" data-category="TV Series">
       <img src="https://files.catbox.moe/tsk2b3.webp" alt="Chainsaw Man" class="anime-cover"/>
       <div class="anime-title">Chainsaw Man</div>
       <div class="anime-subtitle">チェンソーマン</div>
@@ -113,7 +113,7 @@
       <div class="anime-subtitle">Sayonara no Asa ni Yakusoku no Hana o Kazarō</div>
     </a>
 
-    <a href="made-in-abyss.html" class="anime-card" data-category="TV Series">
+    <a href="made_in_abyss.html" class="anime-card" data-category="TV Series">
       <img src="https://files.catbox.moe/4nz7nh.jpg" alt="Made in Abyss" class="anime-cover"/>
       <div class="anime-title">Made in Abyss</div>
       <div class="anime-subtitle">Meido in Abisu</div>
