--- a/index.html
+++ b/index.html
@@ -118,6 +118,24 @@
       <div class="anime-title">Made in Abyss</div>
       <div class="anime-subtitle">Meido in Abisu</div>
     </a>
+
+<a href="kanamemo.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/k0rq1i.jpg" alt="Kanamemo" class="anime-cover"/>
+  <div class="anime-title">Kanamemo</div>
+  <div class="anime-subtitle">(Eng sub)</div>
+</a>
+
+<a href="air.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/v4cdzk.jpeg" alt="Air" class="anime-cover"/>
+  <div class="anime-title">Air</div>
+</a>
+
+<a href="isekai-ojisan.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/n3nylu.jpg" alt="Isekai Ojisan" class="anime-cover"/>
+  <div class="anime-title">Isekai Ojisan</div>
+  <div class="anime-subtitle">Chú tôi trở về từ dị giới</div>
+</a>
+
   </main>
 
   <script>
