--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
       <div class="anime-title">Made in Abyss</div>
       <div class="anime-subtitle">Meido in Abisu</div>
     </a>
-    
-    <a href="kanamemo.html" class="anime-card" data-category="TV Series">
+
+<a href="kanamemo.html" class="anime-card" data-category="TV Series">
   <img src="https://files.catbox.moe/k0rq1i.jpg" alt="Kanamemo" class="anime-cover"/>
   <div class="anime-title">Kanamemo</div>
   <div class="anime-subtitle">(Eng sub)</div>
@@ -128,12 +128,21 @@
 <a href="air.html" class="anime-card" data-category="TV Series">
   <img src="https://files.catbox.moe/v4cdzk.jpeg" alt="Air" class="anime-cover"/>
   <div class="anime-title">Air</div>
+      <div class="anime-subtitle"></div>
 </a>
 
 <a href="isekai-ojisan.html" class="anime-card" data-category="TV Series">
   <img src="https://files.catbox.moe/n3nylu.jpg" alt="Isekai Ojisan" class="anime-cover"/>
   <div class="anime-title">Isekai Ojisan</div>
   <div class="anime-subtitle">Chú tôi trở về từ dị giới</div>
+  <div class="anime-subtitle"></div>
+</a>
+
+<a href="oyasumi-sex.html" class="anime-card" data-category="NSFW">
+  <img src="https://files.catbox.moe/ww6d3e.jpeg" alt="Oyasumi Sex" class="anime-cover"/>
+  <div class="anime-title">Oyasumi Sex</div>
+  <div class="anime-subtitle">Goodnight Sex</div>
+</a>
 </a>
 
   </main>
