--- a/index.html
+++ b/index.html
@@ -155,7 +155,26 @@
       <img src="https://files.catbox.moe/ww6d3e.jpeg" alt="Oyasumi Sex" class="anime-cover"/>
       <div class="anime-title">Oyasumi Sex</div>
       <div class="anime-subtitle">Goodnight Sex</div>
-    </a>
+    </a> 
+  
+<a href="nichijou.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/mg2y7q.jpg" alt="Nichijou" class="anime-cover"/>
+  <div class="anime-title">Nichijou</div>
+  <div class="anime-subtitle">My Ordinary Life</div>
+</a>
+
+<a href="dagashi-kashi.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/xv14ws.webp" alt="Dagashi Kashi" class="anime-cover"/>
+  <div class="anime-title">Dagashi Kashi</div>
+  <div class="anime-subtitle">Kẹo Siêu Ngọt</div>
+</a>
+
+<a href="violet-evergarden.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/7d2o5p.jpg" alt="Violet Evergarden" class="anime-cover"/>
+  <div class="anime-title">Violet Evergarden</div>
+  <div class="anime-subtitle">Violet Evergarden – Hình nhân tự động thủ ký</div>
+</a>
+
   </main>
 
   <script>
