--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
   <div class="anime-subtitle">Gái Nuôi Nhà Sakurasou</div>
 </a>
 
+<a href="plastic-memories.html" class="anime-card" data-category="TV Series">
+  <img src="https://files.catbox.moe/oy2a4g.png" alt="Plastic Memories" class="anime-cover"/>
+  <div class="anime-title">Plastic Memories</div>
+  <div class="anime-subtitle"></div>
+</a>
+
   </main>
 
   <script>
