--- a/index.html
+++ b/index.html
@@ -4,226 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>All That Anime</title>
-  <style>
-    /* ===================================
-       DARK THEME (default)
-    =================================== */
-    body {
-      background-color: #000;
-      color: #aaffdd;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    header {
-      text-align: center;
-      padding: 20px 10px 0;
-    }
-    header h1 {
-      font-size: 2em;
-      color: #66ffcc;
-    }
-    .tabs {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 15px 0;
-    }
-    .tabs button {
-      padding: 10px 20px;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      background-color: #111;
-      color: #aaa;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    .tabs button.active {
-      background-color: #33e1b4;
-      color: black;
-    }
-    .search-box {
-      text-align: center;
-      margin: 10px 0;
-    }
-    .search-box input {
-      padding: 10px;
-      width: 80%;
-      max-width: 400px;
-      border-radius: 8px;
-      border: none;
-      background-color: #1a1a1a;
-      color: #aaffdd;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    .sort-box {
-      text-align: center;
-      margin: 10px 0;
-    }
-    .sort-box button {
-      padding: 8px 14px;
-      background-color: #111;
-      color: #6fffd2;
-      border: 1px solid #222;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    .anime-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .anime-card {
-      background-color: #111;
-      border-radius: 16px;
-      padding: 10px;
-      text-align: center;
-      text-decoration: none;
-      color: #aaffdd;
-      box-shadow: 0 0 10px #0f0f0f;
-      transition: transform 0.3s, background-color 0.3s, color 0.3s;
-    }
-    .anime-card:hover {
-      transform: scale(1.05);
-    }
-    .anime-cover {
-      width: 100%;
-      border-radius: 12px;
-    }
-    .anime-title {
-      font-size: 1.1em;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    .anime-subtitle {
-      font-size: 0.9em;
-      color: #88ccbb;
-    }
 
-    /* Back to Top Button */
-    #toTopBtn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 99;
-      font-size: 18px;
-      border: none;
-      outline: none;
-      background-color: #111;
-      color: #6fffd2;
-      cursor: pointer;
-      padding: 10px 14px;
-      border-radius: 10px;
-      display: none;
-      box-shadow: 0 0 8px #000;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    #toTopBtn:hover {
-      background-color: #33e1b4;
-      color: #000;
-    }
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/light-dark-theme.css">
 
-    /* Theme Toggle Button (fixed top-right) */
-    #themeToggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1000;
-      background-color: #111;
-      color: #6fffd2;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    #themeToggle:hover {
-      background-color: #33e1b4;
-      color: #000;
-    }
-
-    /* ===================================
-       LIGHT THEME OVERRIDES
-    =================================== */
-    body.light {
-      background-color: #f4f7f9;
-      color: #004f3a;
-    }
-    body.light header h1 {
-      color: #66ccaf;
-    }
-    body.light .tabs button {
-      background-color: #e0f7f4;
-      color: #004f3a;
-      border: 1px solid #b2e8dd;
-    }
-    body.light .tabs button.active {
-      background-color: #33e1b4;
-      color: #fff;
-    }
-    body.light .search-box input {
-      background-color: #fff;
-      color: #004f3a;
-    }
-    body.light .sort-box button {
-      background-color: #e0f7f4;
-      color: #004f3a;
-      border: 1px solid #b2e8dd;
-    }
-    body.light .anime-card {
-      background-color: #fff;
-      color: #004f3a;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    body.light .anime-card:hover {
-      background-color: #e0f7f4;
-    }
-    body.light .anime-subtitle {
-      color: #26715d;
-    }
-    body.light #toTopBtn {
-      background-color: #e0f7f4;
-      color: #004f3a;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    body.light #toTopBtn:hover {
-      background-color: #33e1b4;
-      color: #fff;
-    }
-    body.light #themeToggle {
-      background-color: #e0f7f4;
-      color: #004f3a;
-    }
-    body.light #themeToggle:hover {
-      background-color: #33e1b4;
-      color: #fff;
-    }
-  </style>
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+
+<!-- Mặc định: Light + Default -->
+<body class="light default">
+
+  <!-- Nút chuyển theme -->
+  <button id="themeToggle" title="Đổi giao diện">🌙 Dark</button>
+
+  <!-- Chọn chủ đề -->
+  <select id="themeSelect" title="Chọn chủ đề"
+    style="position: fixed; top: 16px; right: 80px; z-index: 9999; border-radius: 8px; padding: 4px;">
+    <option value="default">Default</option>
+    <option value="miku">Miku</option>
+    <option value="asuka">Asuka</option>
+    <option value="mamimi">Mamimi</option>
+    <option value="kanade">Kanade</option>
+  </select>
+
   <header>
     <h1>All That Anime</h1>
     <div id="anime-counts" style="margin-top: 10px; font-size: 1em;"></div>
+
     <div class="tabs">
       <button data-category="TV Series">TV Series</button>
       <button data-category="Movies">Movies</button>
       <button data-category="NSFW">NSFW</button>
     </div>
+
     <div class="search-box">
       <input type="text" id="search" placeholder="Tìm kiếm anime...">
     </div>
+
     <div class="sort-box">
-      <button onclick="toggleSort()" id="sortBtn">Sắp xếp A → Z</button>
+      <button id="sortBtn">Sắp xếp A → Z</button>
     </div>
   </header>
-
-  <!-- THEME TOGGLE (fixed) -->
-  <button id="themeToggle">🌙 Dark</button>
 
   <main class="anime-list" id="animeList">
     <a href="chainsaw-man.html" class="anime-card" data-category="TV Series">
@@ -266,194 +89,13 @@
       <img src="https://files.catbox.moe/ww6d3e.jpeg" alt="Oyasumi Sex" class="anime-cover"/>
       <div class="anime-title">Oyasumi Sex</div>
       <div class="anime-subtitle">Goodnight Sex</div>
-    </a> 
-
-    <a href="nichijou.html" class="anime-card" data-category="TV Series">
-      <img src="https://files.catbox.moe/mg2y7q.jpg" alt="Nichijou" class="anime-cover"/>
-      <div class="anime-title">Nichijou</div>
-      <div class="anime-subtitle">My Ordinary Life</div>
     </a>
-
-    <a href="dagashi-kashi.html" class="anime-card" data-category="TV Series">
-      <img src="https://files.catbox.moe/xv14ws.webp" alt="Dagashi Kashi" class="anime-cover"/>
-      <div class="anime-title">Dagashi Kashi</div>
-      <div class="anime-subtitle">Kẹo Siêu Ngọt</div>
-    </a>
-
-    <a href="violet-evergarden.html" class="anime-card" data-category="TV Series">
-      <img src="https://files.catbox.moe/7d2o5p.jpg" alt="Violet Evergarden" class="anime-cover"/>
-      <div class="anime-title">Violet Evergarden</div>
-      <div class="anime-subtitle">Violet Evergarden – Hình nhân tự động thủ ký</div>
-    </a>
-
-    <a href="sakurasou-no-pet-na-kanojo.html" class="anime-card" data-category="TV Series">
-      <img src="https://files.catbox.moe/3i6bk7.webp" alt="Sakurasou no Pet na Kanojo" class="anime-cover"/>
-      <div class="anime-title">Sakurasou no Pet na Kanojo</div>
-      <div class="anime-subtitle">Gái Nuôi Nhà Sakurasou</div>
-    </a>
-
-    <a href="plastic-memories.html" class="anime-card" data-category="TV Series">
-      <img src="https://files.catbox.moe/oy2a4g.png" alt="Plastic Memories" class="anime-cover"/>
-      <div class="anime-title">Plastic Memories</div>
-      <div class="anime-subtitle">—</div>
-    </a>
-
   </main>
 
-  <!-- BACK TO TOP BUTTON -->
+  <!-- Nút quay về đầu trang -->
   <button id="toTopBtn" title="Về đầu trang">⬆</button>
 
-  <script>
-    /* ===================================
-       TAB + NSFW CONFIRMATION
-    =================================== */
-    const tabs = document.querySelectorAll('.tabs button');
-    const cards = document.querySelectorAll('.anime-card');
-    const search = document.getElementById('search');
-
-    function showCategory(category) {
-      tabs.forEach(tab => {
-        tab.classList.toggle('active', tab.textContent.trim() === category);
-      });
-      cards.forEach(card => {
-        const cat = card.getAttribute('data-category');
-        card.style.display = (category === cat || category === "All") ? "block" : "none";
-      });
-      localStorage.setItem("selectedTab", category);
-    }
-
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        const category = tab.dataset.category || tab.textContent.trim();
-        if (category === "NSFW") {
-          const agreed = localStorage.getItem("agreedToNSFW");
-          if (!agreed) {
-            if (!confirm("⚠️ Nội dung NSFW\nNội dung bạn sắp xem có thể không phù hợp với mọi đối tượng.\nBạn có chắc muốn tiếp tục?")) {
-              return; // Người dùng hủy => không chuyển tab
-            }
-            localStorage.setItem("agreedToNSFW", "true");
-          }
-        }
-        showCategory(category);
-      });
-    });
-
-    const savedTab = localStorage.getItem("selectedTab") || "TV Series";
-    showCategory(savedTab);
-
-    /* ===================================
-       SEARCH FILTER
-    =================================== */
-    search.addEventListener('input', () => {
-      const term = search.value.toLowerCase();
-      const activeTab = document.querySelector('.tabs button.active').textContent.trim();
-      cards.forEach(card => {
-        const title = card.querySelector('.anime-title').textContent.toLowerCase();
-        const subtitle = card.querySelector('.anime-subtitle')?.textContent.toLowerCase() || "";
-        const cat = card.getAttribute('data-category');
-        if (term === "") {
-          const matchTab = (cat === activeTab);
-          card.style.display = matchTab ? "block" : "none";
-        } else {
-          const matchSearch = title.includes(term) || subtitle.includes(term);
-          card.style.display = matchSearch ? "block" : "none";
-        }
-      });
-    });
-
-    /* ===================================
-       SORT A→Z TOGGLE
-    =================================== */
-    let isSorted = false;
-    let originalOrder = [];
-
-    function toggleSort() {
-      const container = document.getElementById('animeList');
-      const allCards = Array.from(container.querySelectorAll('.anime-card'));
-      const visibleCards = allCards.filter(card => card.style.display !== "none");
-      const sortBtn = document.getElementById('sortBtn');
-
-      if (!originalOrder.length) {
-        originalOrder = allCards.map(card => card.cloneNode(true));
-      }
-      if (!isSorted) {
-        const sorted = [...visibleCards].sort((a, b) => {
-          const titleA = a.querySelector('.anime-title').textContent.trim().toLowerCase();
-          const titleB = b.querySelector('.anime-title').textContent.trim().toLowerCase();
-          return titleA.localeCompare(titleB, 'vi', { numeric: true });
-        });
-        sorted.forEach(card => container.appendChild(card));
-        sortBtn.textContent = "Bỏ sắp xếp";
-        isSorted = true;
-      } else {
-        originalOrder.forEach(clone => {
-          const current = Array.from(container.children).find(c =>
-            c.querySelector('.anime-title').textContent === clone.querySelector('.anime-title').textContent
-          );
-          if (current) container.appendChild(current);
-        });
-        sortBtn.textContent = "Sắp xếp A → Z";
-        isSorted = false;
-      }
-    }
-
-    /* ===================================
-       COUNT PER CATEGORY
-    =================================== */
-    document.addEventListener("DOMContentLoaded", () => {
-      const cards = document.querySelectorAll(".anime-card");
-      const counts = {};
-      cards.forEach(card => {
-        const category = card.dataset.category || "Uncategorized";
-        counts[category] = (counts[category] || 0) + 1;
-      });
-      const container = document.getElementById("anime-counts");
-      if (container) {
-        container.innerHTML = Object.entries(counts)
-          .map(([category, count]) => `${category}: ${count}`)
-          .join(" | ");
-      }
-    });
-
-    /* ===================================
-       BACK TO TOP BUTTON
-    =================================== */
-    document.addEventListener("DOMContentLoaded", () => {
-      const toTopBtn = document.getElementById("toTopBtn");
-      window.addEventListener("scroll", () => {
-        toTopBtn.style.display = (window.scrollY > 300) ? "block" : "none";
-      });
-      toTopBtn.addEventListener("click", () => {
-        window.scrollTo({ top: 0, behavior: "smooth" });
-      });
-    });
-
-    /* ===================================
-       LIGHT/DARK THEME TOGGLE
-       - Default = LIGHT mode
-       - Persists choice in localStorage
-    =================================== */
-    const themeToggle = document.getElementById("themeToggle");
-    const bodyEl = document.body;
-    function setTheme(mode) {
-      if (mode === "dark") {
-        bodyEl.classList.remove("light");
-        themeToggle.textContent = "🌙 Dark";
-      } else {
-        bodyEl.classList.add("light");
-        themeToggle.textContent = "☀️ Light";
-      }
-      localStorage.setItem("themeMode", mode);
-    }
-    // On page load, read stored theme or default to "light"
-    const savedTheme = localStorage.getItem("themeMode") || "light";
-    setTheme(savedTheme);
-
-    themeToggle.addEventListener("click", () => {
-      const current = bodyEl.classList.contains("light") ? "light" : "dark";
-      const next = (current === "light") ? "dark" : "light";
-      setTheme(next);
-    });
-  </script>
+  <!-- JavaScript -->
+  <script src="js/index.js" defer></script>
 </body>
 </html>
